# ZephyrCustomLibraryExample

./: CMakeLists.txt  README.rst  prj.conf
dependencies/MyZephyrLibrary/: CMakeLists.txt
dependencies/MyZephyrLibrary/dependencies/LibraryDependency/: .gitignore  CMakeLists.txt
dependencies/MyZephyrLibrary/dependencies/LibraryDependency/include/: libDep.h
dependencies/MyZephyrLibrary/dependencies/LibraryDependency/src/: libDep.c
dependencies/MyZephyrLibrary/include/: MyZephyrLibrary.h
dependencies/MyZephyrLibrary/module/zephyr/: CMakeLists.txt  Kconfig
dependencies/MyZephyrLibrary/src/: MyZephyrLibrary.cpp
src/: main.cpp
